[package]
name = "toroxyproxy"
version = "0.1.0"
authors = ["D Keeler <mozkeeler@gmail.com>"]

[dependencies]
#byteorder = "1.2.1"
futures = "0.1"
hyper = "0.11"
tokio = "0.1"
tokio-core = "0.1"
#tokio-io = "0.1"
toroxide = { path = "../toroxide" }
toroxide-openssl = { path = "../toroxide-openssl" }
